# Esp32FlightController

./: LICENSE.md  README.md  libraries.txt
doc/: tuning_pid.md
src/: Esp32FlighterController.ino  README.md  libraries.txt
src/PX4-AutoPilot/sc16is752/: CMakeLists.txt  README.md  install.txt  sc16is752.cpp  sc16is752.hpp
src/PX4-AutoPilot/sc16is752_gps/: CMakeLists.txt  README.md  install.txt  sc16is752_gps.cpp  sc16is752_gps.hpp
src/esp-idf/: BatteryMonitor.h  CMakeLists.txt  Communication.h  Drone.cpp  FlightControl.cpp  FlightControl.h  MotorControl.cpp  MotorControl.h  README.md  main.cpp
src/esp-idf/main/: BatteryMonitor.cpp  BatteryMonitor.h  CMakeLists.txt  Communication.cpp  Communication.h  Drone.cpp  Drone.h  FlightControl.cpp  FlightControl.h  MotorControl.cpp  MotorControl.h  PID.cpp  PID.h  main.cpp
src/libraries/sc16is742/: SC16IS752.cpp  SC16IS752.h  SC16IS752_BasicBlinkingLED.ino  SC16IS752_BasicLEDTest.ino  SC16IS752_ComprehensiveTest.ino
src/libraries/sc16is752/: README.md  SC16IS752.cpp  SC16IS752.h  SC16IS752_AdvancedBlinkingLED.ino  SC16IS752_ComprehensiveTest.ino  SC16IS752_GPIO.cpp  SC16IS752_GPIO.h  SC16IS752_GPS_LIDAR_Example.ino  SC16IS752_HardwareFlowControlTest.ino  SC16IS752_MultipleLEDs.ino  SC16IS752_UART.cpp  SC16IS752_UART.h  Usage.md
src/libraries/sc16is752/docs/: EXAMPLES.md  Integration.md  USAGE.md
src/libraries/sc16is752/examples/: RuncamMicroSwift3_Manual_Control.ino  RuncamMicroSwift3_RC_Control.ino  SC16IS752_GPIO_blinkLED.ino  SC16IS752_RS485_LoopbackTest.ino  SC16IS752_UART_Examples.ino  SC16IS752_UART_MultiMode_Examples.ino
